# betago

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
settings/: 1.txt  2.txt
src/: app.py  board.py  game.py  graph.py  setting.py  window.py
